--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "cloudinary": "^2.1.0",
     "cookie-parse": "^0.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.2.4"
+    "mongoose": "^8.2.4",
+    "multer": "^1.4.5-lts.1"
   }
 }
